force-app/main/default/objects/Placement_Milestone__c/Placement_Milestone__c.object-meta.xml
<CustomObject>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Placement Milestone</label>
    <nameField>
        <label>Employment Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>