force-app/main/default/objects/Placement_Milestone__c/fields/Case_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_ID__c</fullName>
    <formula>Job_Placement__r.Case_Record__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record ID</label>
    <type>Text</type>
</CustomField>