force-app/main/default/objects/Placement_Milestone__c/fields/Case_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Name__c</fullName>
    <formula>Job_Placement__r.Case_Record__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Name</label>
    <type>Text</type>
</CustomField>