force-app/main/default/objects/Placement_Milestone__c/fields/Contract_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Contract_Milestone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Contract Milestone</label>
    <referenceTo>Contract_Milestone__c</referenceTo>
    <relationshipLabel>Placement Milestones</relationshipLabel>
    <relationshipName>Placement_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>