force-app/main/default/objects/Placement_Milestone__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <inlineHelpText>Source of documentation used for verification.</inlineHelpText>
    <label>Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employer Verification</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>Paystubs</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>