force-app/main/default/objects/Placement_Milestone__c/fields/Duplicate_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Milestone__c</fullName>
    <inlineHelpText>Indicates that a Placement Milestone corresponding to the same Contract Milestone already exists for this client.</inlineHelpText>
    <label>Duplicate Milestone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>