force-app/main/default/objects/Placement_Milestone__c/fields/Hours_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Date__c</fullName>
    <label>Hours to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>