force-app/main/default/objects/Placement_Milestone__c/fields/Job_Placement__c.field-meta.xml
<CustomField>
    <fullName>Job_Placement__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement Milestones</relationshipLabel>
    <relationshipName>Placement_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>