force-app/main/default/objects/Placement_Milestone__c/fields/Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>