force-app/main/default/objects/Placement_Milestone__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option One</fullName>
            </value>
            <value>
                <fullName>Option Two</fullName>
            </value>
            <value>
                <fullName>Option Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>