force-app/main/default/objects/Placement_Milestone__c/fields/Retention_Status__c.field-meta.xml
<CustomField>
    <fullName>Retention_Status__c</fullName>
    <label>Retention Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>