force-app/main/default/objects/Placement_Milestone__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <inlineHelpText>Retention verification date.</inlineHelpText>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>